第二題完成

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -18,12 +18,12 @@
 
 <div class="qr-container">
   <div class="qr-content">  
-    <img src="./images/image-qr-code.png" alt="QRcode">
+    <img src="./images/image-qr-code.png" alt="QR code linking to Frontend Mentor">
   </div>
   <div class="text-content">
-    <h2>
+    <h1>
       Improve your front-end skills by building projects
-    </h2>
+    </h1>
   
     <p>
     Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
